# campi

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
src/: feed.py  main.py  settings.py
src/campi/: feed.py  main.bui  main.py  settings.py  story.py
